[gd_scene load_steps=2 format=3 uid="uid://dfnn7iuty8htv"]

[ext_resource type="Script" uid="uid://dv1n6fnxv20hp" path="res://Code/UI/MainMenu/main_menu.gd" id="1_kpsyw"]

[node name="MainMenu" type="Node2D"]

[node name="main_menu" type="Control" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_kpsyw")
play_target = &"ship_selection"

[node name="title" type="Label" parent="main_menu"]
custom_minimum_size = Vector2(300, 100)
offset_left = 490.0
offset_top = 147.0
offset_right = 790.0
offset_bottom = 247.0
theme_type_variation = &"HeaderLarge"
text = "Title goes here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_container" type="VBoxContainer" parent="main_menu"]
custom_minimum_size = Vector2(300, 0)
offset_left = 490.0
offset_top = 285.0
offset_right = 790.0
offset_bottom = 418.0
theme_override_constants/separation = 20

[node name="btn_play" type="Button" parent="main_menu/button_container"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="btn_settings" type="Button" parent="main_menu/button_container"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="btn_credits" type="Button" parent="main_menu/button_container"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"
